--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -134,12 +134,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <span>Vos idées</span> et <span>votre savoir-faire</span> sur l’ensemble des terminaux connectés
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        Des <span>solutions simples et efficaces</span> sur tous les supports pour vous
-                        aider à gérer vos contenus et vos services <span>en toute autonomie</span>
+                        Gerez <span>vos contenus</span> et <span>vos services</span> en toute autonomie
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        Faites confiance à des <span>experts de la digitalisation</span> des espaces de loisirs et culturels
-                        pour que votre univers traverse les écrans et touche vos <span>visiteurs et prospects</span>
+                        Touchez vos <span>visiteurs </span>et<span> prospects</span> à travers les écrans
                     </h3>
                     <a class= "page-scroll" href="#contact">
                         <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">
@@ -164,7 +162,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
             <!-- /.see-work -->
             <div class="col-md-12 new-style">
-                <p class="wow fadeInLeft animated">Testez les dans votre enseigne, <a>nous les concevons sur mesure !</a></p>
+                <p class="wow fadeInLeft animated">Adoptez-les dans votre enseigne, <a>nous les concevons sur mesure !</a></p>
             </div>
             <!-- /.new-style -->
 
@@ -350,8 +348,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Nos forces à <span> votre service !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaires
-                  grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
+                  Nous vous apportons notre expertise pour booster votre chiffre d'affaires
+                  grâce au web.
                 </p>
             </div>
             <!-- /.service-headline -->
@@ -372,7 +370,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="service wow fadeIn animated">
                         <div class="text">
                             <h4>Responsive Design</h4>
-                            <p>Compatible et adapté à tout type de support.</p>
+                            <p>Outils adaptés à tous les supports.</p>
                         </div>
                         <div class="icons">
                             <i class="material-icons">important_devices</i>
@@ -399,8 +397,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                         <div class="text">
                             <h4>Expérience Utilisateur</h4>
-                            <p>Des fonctionnalités concues pour vos clients et votre entreprise.
-                               (Billeterie, Cartographie, File d'attente numérique)</p>
+                            <p>Des fonctionnalités concues pour vous et vos clients.
+                               (billeterie, cartographie, file d'attente numérique)</p>
                             <br>
                         </div>
                         <br>
@@ -412,7 +410,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="text">
                             <h4>Orienté Business</h4>
                             <p>Des outils de statistiques et de prévisions de
-                              votre chiffre d'affaires, gestion de relances clients</p>
+                              votre chiffre d'affaires, gestion de relances clients.</p>
                         </div>
                     </div>
                     <div class="service-2 wow fadeIn animated">
@@ -421,7 +419,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                         <div class="text">
                             <h4>Autonome</h4>
-                            <p>Newsletters automatisées, envois ciblés</p>
+                            <p>Newsletters automatisées, envois ciblés.</p>
                         </div>
                     </div>
                 </div>
@@ -766,7 +764,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12">
-                <h3 class="wow fadeIn animated">Envie de faire évoluer votre entreprise ?<span> Contactez-nous</span> dès maintenant !</h3>
+                <h3 class="wow fadeIn animated">Faites évoluer votre entreprise</h3>
                 <p class="wow fadeIn animated">Notre équipe répondra à vos questions et vous proposera
                   la solution la plus adaptée pour votre entreprise.</p>
                 <a class= "page-scroll" href="#contact">
