carto et filedattente

--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -145,7 +145,7 @@
 <!-- /.image section -->
 <!-- Services Section
 ================================================== -->
-<section id="services" class="services-section">
+<section id="services-attente" class="services-section">
 
     <div class="container-fluid">
 
@@ -188,7 +188,7 @@
 
 <!-- Call To Action Section
 ================================================== -->
-<section id="call-to" class="call-to-section">
+<section id="call-to-attente" class="call-to-section">
 
     <div class="call-to-layer"></div>
 
@@ -253,7 +253,15 @@
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.34.68.32.35 / (+33) 6.78.12.23.91</p>
+                                <p>(+33) 6.34.68.32.35</p>
+                            </div>
+                        </div>
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>(+33) 6.78.12.23.91</p>
                             </div>
                         </div>
 
