--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -140,7 +140,7 @@
                             <i class="material-icons">location_on</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Géolocalisation précise</a>
+                            <h4>Géolocalisation précise</h4>
                             <p>La précision de Google maps sur votre plan. </p>
                         </div>
                         <br><br>
@@ -150,7 +150,7 @@
                             <i class="material-icons">near_me</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Temps réel</a>
+                            <h4>Temps réel</h4>
                             <p>Le rafraichissement instantané offre un outil à vos clients pour s'orienter facilement</p>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                             <i class="material-icons">directions_walk</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Itinéraires intelligents</a>
+                            <h4>Itinéraires intelligents</h4>
                             <p>Possibilité de rechercher un endroit sur la carte et de faire apparaitre
                               un itinéraire géolocalisé directement sur votre plan.</p>
                         </div>
@@ -207,7 +207,15 @@
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>(+33) 6.34.68.32.35 / (+33) 6.78.12.23.91</p>
+                                <p>(+33) 6.34.68.32.35</p>
+                            </div>
+                        </div>
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>(+33) 6.78.12.23.91</p>
                             </div>
                         </div>
 
