--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -102,7 +102,8 @@
                                 </div>
                                 <!-- /.typed-headline -->
 
-                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication ...</a>
+                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">
+                                En savoir plus ...</a>
                             </div>
                         </div>
                     </div>
