--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -141,7 +141,7 @@
                         </div>
                         <div class="text">
                             <h4>Géolocalisation précise</h4>
-                            <p>La précision de Google maps sur votre plan. </p>
+                            <p>La précision de Google Maps sur votre plan. </p>
                         </div>
                         <br><br>
                     </div>
