--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -248,13 +248,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="about-text">
                     <h2 class="wow fadeIn animated">Pourquoi <span> Vous ?</span></h2><br/>
                     <h3 class="wow fadeIn animated">
-                        <span>Fidéliser vos visiteurs et convainquez-en de nouveaux !</span>
+                        <span>Fidélisez vos visiteurs et convainquez-en de nouveaux !</span>
                     </h3>
-                      <p class="wow fadeIn animated"> C'est le défi majeur à l'horizon 2025 pour le développement des
-                        espaces professionnels de loisirs et culturels. <br/>
-                          Notre objectif est de renforcer votre relation avec vos propres canaux de communication en optimisant ses interactions.
+                      <p class="wow fadeIn animated"> C'est le défi majeur à l'horizon 2025. <br/>
+                          Renforcez vos canaux de communication en optimisant ses interactions.
                       </p>
-                      <p class="wow fadeIn animated">Vous obtiendrez daventage de visiteurs ainsi qu'un outil
+                      <p class="wow fadeIn animated">Obtiendrez daventage de visiteurs ainsi qu'un outil
                         performant personalisé pour fidéliser vos clients historiques.
                       </p>
                     <ul class="about-icons list-inline">
@@ -348,8 +347,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Nos forces à <span> votre service !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous vous apportons notre expertise pour booster votre chiffre d'affaires
-                  grâce au web.
+                  Boostez votre chiffre d'affaires grâce au web.
                 </p>
             </div>
             <!-- /.service-headline -->
