--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -57,7 +57,7 @@
                 <a class="page-scroll hvr-underline-from-center" href="index.html#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Nos petits plus</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Une révolution</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#about">Pourquoi vous</a>
