--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -66,7 +66,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Nos petits plus</a>
+                <a class="page-scroll hvr-underline-from-center" href="#our-work">Une révolution</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#about">Pourquoi vous ?</a>
