start working on wording

--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -120,6 +120,61 @@
     <!-- /.container-fluid -->
 </section>
 
+<!-- About Us Section
+================================================== -->
+<section id="about2" class="about-section">
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-12">
+
+                <div class="about-text">
+                    <h2 class="wow fadeIn animated">Une expérience <span>renouvellée</span> pour vos clients</h2><br/><br/>
+                      <p class="wow fadeIn animated">
+                              Statistique contatée* dans un parc d'attraction du nord de Paris :<br/>
+                      </p>
+                      <h3 class="wow fadeIn animated">
+                          <span class="minutes">13</span> minutes d'amusement pour <span class="minutes">95</span> minutes d'attente
+                      </h3>
+                    <br><br>
+                    <p id="asterisque" class="wow fadeIn animated">*le 26 Juillet 2017</p>
+                </div>
+                <!-- /.about-text -->
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.about-section -->    
+
+<section id="wedo" class="skills-section">
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-12">
+                <div class="skills-headline">
+                    <h2 class="wow fadeIn animated">
+                        <span>La solution ?</span>
+                    </h2>
+                    <br><br>
+                    <h3 class="wow fadeIn animated">
+                        Une application qui permet à <span>vos clients</span> de prendre un ticket et <span>d'attendre</span> en <span>faisant autre chose.</span>
+                    </h3>
+                    <h3 class="wow fadeIn animated">
+                        L'application avertit de <span>l'avancement de la file d'attente</span> et lorsque leur tour approche.
+                    </h3>
+                </div>
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+    </div>
+</section>      
+    
 <!-- Image Section
 ================================================== -->
 <section class="image-section filedattente" id="portfolio-details">
@@ -144,6 +199,7 @@
     <!-- /.container -->
 </section>
 <!-- /.image section -->
+    
 <!-- Services Section
 ================================================== -->
 <section id="services-attente" class="services-section">
