clean & integration nouvelle photo

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -134,7 +134,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <span>Vos idées</span> et <span>votre savoir-faire</span> sur l’ensemble des terminaux connectés
                     </h3>
                     <h3 class="wow fadeIn animated">
-                        Gerez <span>vos contenus</span> et <span>vos services</span> en toute autonomie
+                        Gérez <span>vos contenus</span> et <span>vos services</span> en toute autonomie
                     </h3>
                     <h3 class="wow fadeIn animated">
                         Touchez vos <span>visiteurs </span>et<span> prospects</span> à travers les écrans
