--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -132,7 +132,7 @@
                 <div class="about-text">
                     <h2 class="wow fadeIn animated">Une expérience <span>renouvellée</span> pour vos clients</h2><br/><br/>
                       <p class="wow fadeIn animated">
-                              Statistique contatée* dans un parc d'attraction du nord de Paris :<br/>
+                              Statistique constatée* dans un parc d'attraction du nord de Paris :<br/>
                       </p>
                       <h3 class="wow fadeIn animated">
                           <span class="minutes">13</span> minutes d'amusement pour <span class="minutes">95</span> minutes d'attente
