create 3 points & change 1st sentence

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -105,7 +105,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <div class="typed-text">
                     <span class="skilltechtypetext">
-                        Espaces de loisirs et culturels, mettez votre statégie digitale au coeur de votre métier !
+                        L'expérience digitale au coeur de votre métier !
                     </span>
                 </div>
             </div>
@@ -122,6 +122,41 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <section id="big-image" class="image-section"></section>
 <!-- /.image section -->
 
+<!-- About Us Section
+================================================== -->
+<section id="three-points" class="about-section">
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-12">
+
+                <div class="about-text">
+                    <ul class="about-icons list-inline">
+                        <li class="wow fadeIn animated">
+                            <div class="icon"><i class="material-icons">beenhere</i></div>
+                            <div class="text">Rapide & Efficace</div>
+                        </li>
+                        <li class="wow fadeIn animated">
+                            <div class="icon"><i class="material-icons">mood</i></div>
+                            <div class="text">Adapté à votre univers</div>
+                        </li>
+                        <li class="wow fadeIn animated">
+                            <div class="icon"><i class="material-icons">all_inclusive</i></div>
+                            <div class="text">Moderne & Autonome</div>
+                        </li>
+                    </ul>
+                    <!-- /.about-icons -->
+                </div>
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.about-section -->
+    
 <section id="wedo" class="skills-section">
 
     <div class="container">
