--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -196,13 +196,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <h2 class="wow fadeInLeft animated">Nos fonctionnalités <span>révolutionnaires pour vous !</span></h2>
             </div>
             <!-- /.see-work -->
-            <div class="col-md-12 new-style">
-                <p class="wow fadeInLeft animated">Adoptez-les dans votre enseigne, <a>nous les concevons sur mesure !</a></p>
-            </div>
-            <!-- /.new-style -->
-
+            
             <div class="col-md-12 portfolio-images">
-                <div class="col-md-6 ">
+                <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img first" onClick="window.location.href='cartographie.html';">
                             <img class="img-responsive" src="assets/images/cartographie.jpg"
                                  alt="porftofilio thumbnail"/>
@@ -230,11 +226,68 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p>Plongez vos visiteurs dans votre univers</p>
                         <a href="cartographie.html">Cliquez pour en savoir plus !</a>
                     </div>
+                    <div class="sweep-right"></div>
                 </div>
                 <!-- /.col-md-3 -->
 
-                <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second" onClick="window.location.href='file-dattente.html';">
+                <div class="col-md-3 col-sm-6 col-xs-6">
+                    <div class="portfolio-img second" onClick="window.location.href='cartographie.html';">
+                            <img class="img-responsive" src="assets/images/cartographie.jpg"
+                                 alt="porftofilio thumbnail"/>
+                            <div class="sweep-left"></div>
+                            <div class="sweep-from-center">
+                                <div class="sweep-layer">
+                                    <div class="sweep-content">
+
+                                        <div class="sweep-icon">
+                                          <a href="cartographie.html">
+                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
+                                        <p>Plongez vos visiteurs dans votre univers</p>
+                                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="sweep-right"></div>
+                    </div>
+                    <!-- /.portfolio-img -->
+                    <div class='not-visible-little-screens'>
+                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
+                        <p>Plongez vos visiteurs dans votre univers</p>
+                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                    </div>
+                    <div class="sweep-right"></div>
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-md-3 col-sm-6 col-xs-6">
+                    <div class="portfolio-img third" onClick="window.location.href='file-dattente.html';">
+                        <img class="img-responsive" src="assets/images/attente.png"
+                             alt="porftofilio thumbnail">
+                        <div class="sweep-left"></div>
+                        <div class="sweep-from-center">
+                            <div class="sweep-layer">
+                                <div class="sweep-content">
+                                    <div class="sweep-icon">
+                                        <a href="file-dattente.html">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                    <h3><a href="file-dattente.html">La file d'attente numérique</a></h3>
+                                    <p>La révolution de l'attente est en marche</p>
+                                    <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sweep-right"></div>
+                    </div>
+                </div>
+                <!-- /.col-md-3 -->
+
+                <div class="col-md-3 col-sm-6 col-xs-6">
+                    <div class="portfolio-img fourth" onClick="window.location.href='file-dattente.html';">
                         <img class="img-responsive" src="assets/images/attente.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
@@ -255,11 +308,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
-                    <div class='not-visible-little-screens'>
-                        <h3><a href="file-dattente.html">La file d'attente numérique</a></h3>
-                        <p>La révolution de l'attente est en marche</p>
-                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
-                    </div>
                 </div>
                 <!-- /.col-md-3 -->
             </div>
