--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -193,7 +193,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Nos fonctionnalités <span>révolutionnaires pour vous !</span></h2>
+                <h2 class="wow fadeInLeft animated">Fonctionnalités <span>sur-mesure</span> pour votre activité</h2>
             </div>
             <!-- /.see-work -->
             
@@ -264,7 +264,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img third" onClick="window.location.href='file-dattente.html';">
-                        <img class="img-responsive" src="assets/images/attente.png"
+                        <img class="img-responsive" src="assets/images/attente-little.jpg"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
@@ -319,6 +319,35 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.our-work-section -->
 
+<!-- Quote Section
+================================================== -->
+<section id="quote" class="quote-section">
+    <div class="video-overlay"></div>
+
+    <div class="container-fluid">
+
+        <div class="row">
+
+            <div class="col-md-12 quote-bottom">
+                <div class="container">
+                    <br>
+                    <br>
+                    <h3 class="wow fadeIn animated">
+                        "Ce qui est dangereux, c’est de <span>ne pas évoluer</span>."
+                    </h3>
+                    <p class="wow fadeIn animated">Jeff Bezos<span> - PDG d'Amazon </span></p>
+                    <br>
+                    <br>
+                </div>
+            </div>
+            <!-- /.quote-bottom -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
+</section>
+<!-- /.quote-section -->    
+    
 <!-- About Us Section
 ================================================== -->
 <section id="about" class="about-section">
@@ -380,44 +409,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!-- /.container -->
 </section>
 <!-- /.about-section -->
-
-<!-- Quote Section
-================================================== -->
-<section id="quote" class="quote-section">
-    <div class="video-overlay"></div>
-
-    <div class="container-fluid">
-
-        <div class="row">
-
-            <div class="col-md-12 quote-headline">
-                <h4 class="wow fadeIn animated">Nous sommes avec vous <span>pour vous accompagner dans votre digitalisation</span></h4>
-            </div>
-            <!-- /.quote-headline -->
-
-            <div class="col-md-12 quote-bottom">
-                <div class="container">
-                    <h3 class="wow fadeIn animated">
-                        "Lorsque deux forces sont jointes,
-                        <span>leur efficacité est double.</span>."
-                    </h3>
-                    <p class="wow fadeIn animated">Isaac NEWTON<span> - Physicien </span></p>
-                    <br>
-                    <br>
-                    <h3 class="wow fadeIn animated">
-                        "La logique vous conduira d’un point A à un point B.
-                        <span> L'imagination </span> et <span> l'audace </span>vous conduiront où vous le désirez"
-                    </h3>
-                    <p class="wow fadeIn animated">Albert Einstein<span> - Physicien </span></p>
-                </div>
-            </div>
-            <!-- /.quote-bottom -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-</section>
-<!-- /.quote-section -->
 
 <!-- Services Section
 ================================================== -->
@@ -816,7 +807,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
           </div>
           <div class="col-md-12 service-headline">
             <p class="wow fadeIn animated">
-              Pour toutes confections sur-mesures, <span>contactez-nous !</span></p>
+              Pour toutes confections sur-mesure, <span>contactez-nous !</span></p>
               <p>
               Nous établierons ensemble votre stratégie digitale.
             </p>
@@ -899,7 +890,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                     </div>
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Développement sur mesure</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Développement sur-mesure</div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated second-bar"></div>
                         </div>
