--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -130,7 +130,7 @@
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Une expérience <span>renouvellée</span> pour vos clients</h2><br/><br/>
+                    <h2 class="wow fadeIn animated">Une expérience <span>renouvelée</span> pour vos clients</h2><br/><br/>
                       <p class="wow fadeIn animated">
                               Statistique constatée* dans un parc d'attraction du nord de Paris :<br/>
                       </p>
