fusion en 4 forces au lieu de 6

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -105,7 +105,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <div class="typed-text">
                     <span class="skilltechtypetext">
-                        L'expérience digitale au coeur de votre métier !
+                        L'expérience digitale au coeur de votre métier
                     </span>
                 </div>
             </div>
@@ -342,7 +342,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Nos forces à <span> votre service !</span></h2>
+                <h2 class="wow fadeIn animated"> Nos forces à <span> votre service</span></h2>
                 <p class="wow fadeIn animated">
                   Boostez votre chiffre d'affaires grâce au web.
                 </p>
@@ -351,16 +351,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12 service-content">
                 <div class="left">
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <h4>Web Design</h4>
-                            <p>Une visibilité et une utilisation agréable et simple.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">touch_app</i>
-                        </div>
-                    </div>
-                    <br>
                     <br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
@@ -371,6 +361,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <i class="material-icons">important_devices</i>
                         </div>
                     </div>
+                    <br>
+                    <br>
+                    <br>
                     <br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
@@ -386,6 +379,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <img src="assets/images/iphone6.png" alt="iphone">
                 </div>
                 <div class="right">
+                    <br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">mood</i>
@@ -398,6 +392,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                         <br>
                     </div>
+                    <br>
+                    <br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">trending_up</i>
@@ -405,16 +401,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="text">
                             <h4>Orienté Business</h4>
                             <p>Des outils de statistiques et de prévisions de
-                              votre chiffre d'affaires, gestion de relances clients.</p>
-                        </div>
-                    </div>
-                    <div class="service-2 wow fadeIn animated">
-                        <div class="icons">
-                            <i class="material-icons">autorenew</i>
-                        </div>
-                        <div class="text">
-                            <h4>Autonome</h4>
-                            <p>Newsletters automatisées, envois ciblés.</p>
+                              votre chiffre d'affaires, gestion de relances clients, 
+                                newsletters automatisées, envois ciblés.</p>
                         </div>
                     </div>
                 </div>
@@ -441,7 +429,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Des offres adaptées à <span> vos besoins !</span></h2>
+                <h2 class="wow fadeIn animated"> Des offres adaptées à <span> vos besoins</span></h2>
 
             </div>
 
@@ -708,7 +696,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
           </div>
           <div class="col-md-12 service-headline">
             <p class="wow fadeIn animated">
-              Pour toutes confections sur-mesure, <span>contactez-nous !</span></p>
+              Pour toutes confections sur-mesure, <span>contactez-nous</span></p>
               <p>
               Nous établierons ensemble votre stratégie digitale.
             </p>
@@ -739,7 +727,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12">
                 <h3 class="wow fadeIn animated">Ouvrez les perspectives d'une nouvelle expérience</h3>
                 <a class= "page-scroll" href="#contact">
-                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous !</button>
+                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
                 </a>
             </div>
             <!-- /.col-md-12 -->
