--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -171,7 +171,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 portfolio-images">
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img first" onClick="window.location.href='cartographie.html';">
-                            <img class="img-responsive" src="assets/images/cartographie.jpg"
+                            <img class="img-responsive" src="assets/images/fidelisation.jpg"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
                             <div class="sweep-from-center">
@@ -266,7 +266,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img fourth" onClick="window.location.href='file-dattente.html';">
-                        <img class="img-responsive" src="assets/images/attente.png"
+                        <img class="img-responsive" src="assets/images/com.jpg"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
