add contact button

--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -307,7 +307,7 @@
                         </div><br><br>
 
                         <div class="bottom-info">
-                            <h4 class="wow fadeIn animated"><span>Retrouvez nous</span> sur les réseaux</h4>
+                            <h4 class="wow fadeIn animated"><span>Retrouvez-nous</span> sur les réseaux</h4>
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
