--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -59,7 +59,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <a href="#0" class="st-nav-trigger">
         Menu<span></span>
     </a>
-
+    
     <nav id="st-main-nav">
         <ul>
             <li>
@@ -83,7 +83,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         </ul>
     </nav>
 </div>
-<!-- /#st-nav -->
 
 <!-- Hero Section
 ================================================== -->
@@ -728,7 +727,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12">
                 <h3 class="wow fadeIn animated">Ouvrez les perspectives d'une nouvelle expérience</h3>
                 <a class= "page-scroll" href="#contact">
-                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+                <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
                 </a>
             </div>
             <!-- /.col-md-12 -->
@@ -803,7 +802,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <br>
 
                         <div class="bottom-info">
-                            <h4 class="wow fadeIn animated"><span>Retrouvez nous</span> sur les réseaux</h4>
+                            <h4 class="wow fadeIn animated"><span>Retrouvez-nous</span> sur les réseaux</h4>
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
@@ -867,6 +866,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.contact-section -->
 
+<a class="btn btn-default page-scroll" href="#contact"><i class="material-icons">chat</i></a>
+    
 <!-- Footer
 ================================================== -->
 <footer>
