--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -696,7 +696,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
           </div>
           <div class="col-md-12 service-headline">
             <p class="wow fadeIn animated">
-              Pour toutes confections sur-mesure, <span>contactez-nous</span></p>
+              Pour toutes confections sur-mesure, <a class= "page-scroll" href="#contact">
+                contactez-nous
+                </a>
+              </p>
               <p>
               Nous établierons ensemble votre stratégie digitale.
             </p>
